Added Persistence layer and refactored code.

--- a/TechTrack/TechTrack/Components/Account/Shared/AccountLayout.razor
+++ b/TechTrack/TechTrack/Components/Account/Shared/AccountLayout.razor
@@ -1,5 +1,5 @@
 ﻿@inherits LayoutComponentBase
-@layout TechTrack.Components.Layout.MainLayout
+@layout TechTrack.Blazor.Components.Layout.MainLayout
 @inject NavigationManager NavigationManager
 
 @if (HttpContext is null)
