--- a/TechTrack/TechTrack/Components/_Imports.razor
+++ b/TechTrack/TechTrack/Components/_Imports.razor
@@ -9,4 +9,4 @@
 @using Microsoft.JSInterop
 @using TechTrack
 @using TechTrack.Client
-@using TechTrack.Components
+@using TechTrack.Blazor.Components
