--- a/TechTrack/TechTrack/Components/Account/Pages/ConfirmEmail.razor
+++ b/TechTrack/TechTrack/Components/Account/Pages/ConfirmEmail.razor
@@ -3,6 +3,7 @@
 @using System.Text
 @using Microsoft.AspNetCore.Identity
 @using Microsoft.AspNetCore.WebUtilities
+@using TechTrack.Blazor.Components.Account
 @using TechTrack.Data
 
 @inject UserManager<ApplicationUser> UserManager
