--- a/TechTrack/TechTrack.Client/Pages/UsersWithEquipments.razor
+++ b/TechTrack/TechTrack.Client/Pages/UsersWithEquipments.razor
@@ -1,7 +1,7 @@
 ﻿@page "/users-with-equipment"
 @inject HttpClient Http
-@using TechTrack.Application.Equipments.ViewModels
-@using TechTrack.Application.Users.ViewModels
+@using TechTrack.Common.ViewModel.Equipments
+@using TechTrack.Common.ViewModel.Users
 
 <h3>Users and Their Equipment</h3>
 
