--- a/TechTrack/TechTrack.Client/Pages/Equipments/UpdateEquipment.razor
+++ b/TechTrack/TechTrack.Client/Pages/Equipments/UpdateEquipment.razor
@@ -1,6 +1,10 @@
 ﻿@page "/equipment/update/{EquipmentId:guid}"
-@inject EquipmentsHttpClientService EquipmentsService
+@using TechTrack.Common.Dtos.Equipments
+@using TechTrack.Common.Interfaces.HttpClients
+@using AutoMapper
+@inject IEquipmentsHttpClientService EquipmentsService
 @inject NavigationManager NavigationManager
+@inject IMapper Mapper
 
 <h3>Update Equipment</h3>
 
@@ -40,7 +44,7 @@ else
     [Parameter]
     public Guid EquipmentId { get; set; }
 
-    private EquipmentForUpdateDto equipmentDto;
+    private EquipmentDto equipmentDto;
 
     protected override async Task OnInitializedAsync()
     {
@@ -49,7 +53,8 @@ else
 
     private async Task HandleValidSubmit()
     {
-        await EquipmentsService.UpdateEquipmentAsync(EquipmentId, equipmentDto);
+        var equipmentForUpdateDto = Mapper.Map<EquipmentForUpdateDto>(equipmentDto);
+        await EquipmentsService.UpdateEquipmentAsync(EquipmentId, equipmentForUpdateDto);
         NavigationManager.NavigateTo("/equipments");
     }
 }
