--- a/TechTrack/TechTrack/Components/Account/Pages/ExternalLogin.razor
+++ b/TechTrack/TechTrack/Components/Account/Pages/ExternalLogin.razor
@@ -6,7 +6,7 @@
 @using System.Text.Encodings.Web
 @using Microsoft.AspNetCore.Identity
 @using Microsoft.AspNetCore.WebUtilities
-@using TechTrack.Data
+@using TechTrack.Blazor.Data
 
 @inject SignInManager<ApplicationUser> SignInManager
 @inject UserManager<ApplicationUser> UserManager
