--- a/TechTrack/TechTrack/Components/Account/Pages/ResetPassword.razor
+++ b/TechTrack/TechTrack/Components/Account/Pages/ResetPassword.razor
@@ -4,7 +4,7 @@
 @using System.Text
 @using Microsoft.AspNetCore.Identity
 @using Microsoft.AspNetCore.WebUtilities
-@using TechTrack.Data
+@using TechTrack.Blazor.Data
 
 @inject IdentityRedirectManager RedirectManager
 @inject UserManager<ApplicationUser> UserManager
