--- a/TechTrack/TechTrack/Components/Account/Shared/ExternalLoginPicker.razor
+++ b/TechTrack/TechTrack/Components/Account/Shared/ExternalLoginPicker.razor
@@ -1,6 +1,6 @@
 ﻿@using Microsoft.AspNetCore.Authentication
 @using Microsoft.AspNetCore.Identity
-@using TechTrack.Data
+@using TechTrack.Blazor.Data
 
 @inject SignInManager<ApplicationUser> SignInManager
 @inject IdentityRedirectManager RedirectManager
