--- a/TechTrack/TechTrack/Components/Account/Shared/ManageNavMenu.razor
+++ b/TechTrack/TechTrack/Components/Account/Shared/ManageNavMenu.razor
@@ -1,5 +1,5 @@
 ﻿@using Microsoft.AspNetCore.Identity
-@using TechTrack.Data
+@using TechTrack.Blazor.Data
 
 @inject SignInManager<ApplicationUser> SignInManager
 
