--- a/TechTrack/TechTrack/Components/_Imports.razor
+++ b/TechTrack/TechTrack/Components/_Imports.razor
@@ -7,6 +7,6 @@
 @using static Microsoft.AspNetCore.Components.Web.RenderMode
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.JSInterop
-@using TechTrack
-@using TechTrack.Client
+@using TechTrack.Blazor
+@using TechTrack.Blazor.Client
 @using TechTrack.Blazor.Components
