--- a/TechTrack/TechTrack/Components/Account/Pages/ConfirmEmail.razor
+++ b/TechTrack/TechTrack/Components/Account/Pages/ConfirmEmail.razor
@@ -4,7 +4,7 @@
 @using Microsoft.AspNetCore.Identity
 @using Microsoft.AspNetCore.WebUtilities
 @using TechTrack.Blazor.Components.Account
-@using TechTrack.Data
+@using TechTrack.Blazor.Data
 
 @inject UserManager<ApplicationUser> UserManager
 @inject IdentityRedirectManager RedirectManager
