--- a/TechTrack/TechTrack/Components/Account/Pages/Login.razor
+++ b/TechTrack/TechTrack/Components/Account/Pages/Login.razor
@@ -3,7 +3,7 @@
 @using System.ComponentModel.DataAnnotations
 @using Microsoft.AspNetCore.Authentication
 @using Microsoft.AspNetCore.Identity
-@using TechTrack.Data
+@using TechTrack.Blazor.Data
 
 @inject SignInManager<ApplicationUser> SignInManager
 @inject ILogger<Login> Logger
