--- a/TechTrack/TechTrack/Components/Account/Pages/LoginWith2fa.razor
+++ b/TechTrack/TechTrack/Components/Account/Pages/LoginWith2fa.razor
@@ -2,7 +2,7 @@
 
 @using System.ComponentModel.DataAnnotations
 @using Microsoft.AspNetCore.Identity
-@using TechTrack.Data
+@using TechTrack.Blazor.Data
 
 @inject SignInManager<ApplicationUser> SignInManager
 @inject UserManager<ApplicationUser> UserManager
