--- a/TechTrack/TechTrack/Components/Account/Pages/Manage/GenerateRecoveryCodes.razor
+++ b/TechTrack/TechTrack/Components/Account/Pages/Manage/GenerateRecoveryCodes.razor
@@ -1,7 +1,7 @@
 ﻿@page "/Account/Manage/GenerateRecoveryCodes"
 
 @using Microsoft.AspNetCore.Identity
-@using TechTrack.Data
+@using TechTrack.Blazor.Data
 
 @inject UserManager<ApplicationUser> UserManager
 @inject IdentityUserAccessor UserAccessor
