--- a/TechTrack/TechTrack/Components/Account/Pages/Manage/TwoFactorAuthentication.razor
+++ b/TechTrack/TechTrack/Components/Account/Pages/Manage/TwoFactorAuthentication.razor
@@ -2,7 +2,7 @@
 
 @using Microsoft.AspNetCore.Http.Features
 @using Microsoft.AspNetCore.Identity
-@using TechTrack.Data
+@using TechTrack.Blazor.Data
 
 @inject UserManager<ApplicationUser> UserManager
 @inject SignInManager<ApplicationUser> SignInManager
