--- a/Techtrack.Ui/Techtrack.Ui/Components/Pages/Equipments/Equipments.razor
+++ b/Techtrack.Ui/Techtrack.Ui/Components/Pages/Equipments/Equipments.razor
@@ -9,6 +9,17 @@
 
 <h3>Equipments</h3>
 
+<div class="row">
+    <div class="col-md-6">
+        <div class="input-group mb-3">
+            <span class="input-group-text">Search</span>
+            <input type="text" class="form-control" @bind="filter.Name" placeholder="Search by name">
+            <input type="text" class="form-control" @bind="filter.Type" placeholder="Search by type">
+            <button class="btn btn-primary" @onclick="ApplyFilter">Apply Filter</button>
+        </div>
+    </div>
+</div>
+
 @if (equipments == null)
 {
     <p><em>Loading...</em></p>
@@ -22,9 +33,15 @@ else
     <table class="table">
         <thead>
             <tr>
-                <th>Name</th>
-                <th>Type</th>
-                <th>Status</th>
+                <th @onclick="() => SortByColumn(nameof(EquipmentOutputVm.Name))">
+                    Name <i class="fas fa-sort" @onclick="() => SortByColumn(nameof(EquipmentOutputVm.Name))"></i> 
+                </th>
+                <th @onclick="() => SortByColumn(nameof(EquipmentOutputVm.Type))">
+                    Type <i class="fas fa-sort" @onclick="() => SortByColumn(nameof(EquipmentOutputVm.Type))"></i>
+                </th>
+                <th @onclick="() => SortByColumn(nameof(EquipmentOutputVm.Status))">
+                    Status <i class="fas fa-sort" @onclick="() => SortByColumn(nameof(EquipmentOutputVm.Status))"></i>
+                </th>
                 <th>Actions</th>
             </tr>
         </thead>
@@ -43,6 +60,17 @@ else
             }
         </tbody>
     </table>
+    <PaginatedList CurrentPage="@currentPage"
+                   PageCount="@equipments.TotalPages"
+                   VisiblePages="5"
+                   ShowFirstLast="true"
+                   ShowPageNumbers="true"
+                   FirstText="&laquo;"
+                   LastText="&raquo;"
+                   NextText="&rsaquo;"
+                   PreviousText="&lsaquo;"
+                   OnPageChanged="(async e => { currentPage = e; await LoadDistributions();})">
+    </PaginatedList>
 }
 
 <button class="btn btn-success" @onclick="AddEquipment">Add Equipment</button>
@@ -50,10 +78,23 @@ else
 @code {
     private PaginatedResult<EquipmentOutputVm>? equipments;
     private EquipmentInputVm filter = new();
+    private int currentPage = 1;
+    private bool isAscending = true;
+    private string sortByColumn = string.Empty;
 
     protected override async Task OnInitializedAsync()
     {
+        await LoadEquipments();
+    }
+
+    private async Task LoadEquipments()
+    {
         equipments = await EquipmentsHttpClientService.GetEquipmentsAsync(filter);
+    }
+
+    private async Task ApplyFilter()
+    {
+        await LoadEquipments();
     }
 
     private async Task AddEquipment()
@@ -69,6 +110,24 @@ else
     private async Task RetireEquipment(Guid id)
     {
         await EquipmentsHttpClientService.RetireEquipmentAsync(id);
-        equipments = await EquipmentsHttpClientService.GetEquipmentsAsync(filter);
+        await LoadEquipments();
+    }
+
+    private async Task SortByColumn(string columnName)
+    {
+        if (columnName == sortByColumn)
+        {
+            isAscending = !isAscending;
+        }
+        else
+        {
+            isAscending = true;
+            sortByColumn = columnName;
+        }
+
+        filter.SortBy = sortByColumn;
+        filter.SortDirection = isAscending ? "Asc" : "Desc";
+
+        await LoadEquipments();
     }
 }
