--- a/Techtrack.Ui/Techtrack.Ui/Components/App.razor
+++ b/Techtrack.Ui/Techtrack.Ui/Components/App.razor
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="bootstrap/bootstrap.min.css" />
     <link rel="stylesheet" href="app.css" />
     <link rel="stylesheet" href="Techtrack.Ui.styles.css" />
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet" />
     <link rel="icon" type="image/png" href="favicon.png" />
     <HeadOutlet />
 </head>
@@ -15,6 +16,7 @@
 <body>
     <Routes />
     <script src="_framework/blazor.web.js"></script>
+
 </body>
 
 </html>
