--- a/Techtrack.Ui/Techtrack.Ui/Components/Layout/NavMenu.razor
+++ b/Techtrack.Ui/Techtrack.Ui/Components/Layout/NavMenu.razor
@@ -19,13 +19,7 @@
         </div>
 
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="counter">
-                <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Counter
-            </NavLink>
-        </div>
-
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="equipments/equipments">
+            <NavLink class="nav-link" href="equipment">
                 <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Equipments
             </NavLink>
         </div>
